# NL-AppReviewInsights

./: .env.example  .gitattributes  .gitignore  README.md  check_integration.py  dump_reviews.py  pyproject.toml  requirements.txt  run_gp_collect.py  run_phase2.py  run_phase3.py  run_phase4.py  run_pipeline.py  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
Docs/: DEMO_CHECKLIST.md  DEPLOYMENT_STREAMLIT.md  MCP_SETUP.md  ProblemStatement.md  SECRETS_AND_GIT.md  architecture.md  implementationplan.md  phase-1-review-collection-eval.md  phase-2-analysis-eval.md  phase-3-report-generation-eval.md  phase-4-distribution-eval.md
Docs/deliverables/: README.md  (+4 more)
MCPServer/: README.md
data/: dashboard_seed.json
frontend/: __init__.py  dashboard_ui.py
phase-1/: create_sample_data.py  view_reviews.py
scripts/: check_no_secrets_staged.ps1  check_no_secrets_staged.py  check_oauth_ready.ps1  complete_oauth.ps1  export_streamlit_secrets.ps1  export_weekly_deliverables.py  guard_repo_secrets.py  import_token.ps1  install_credentials.ps1  install_git_hooks.ps1  print_oauth_url.ps1  purge_repo_secrets.py  repo_git_guard.py  safe_git_push.ps1  secret_scan.py  start_mcp_server.ps1  untrack_secrets.py  verify_credentials.ps1
shared/: __init__.py  dashboard_data.py  database.py  db_paths.py  google_auth.py  google_direct.py  groq_throttle.py  groww_product_map.py  mcp_config.py  models.py  phase2_config.py  phase2_sampling.py  pii_scrubber.py  pipeline_runner.py  play_collect.py  play_store_config.py  review_normalizer.py  secret_paths.py  week_over_week.py
(+43 files in other folders)
